--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 description = "Convert a syllabus into chunks from Wikipedia articles"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "langchain-unstructured>=0.1.6",
+    "langchain>=0.3.14",
+    "matplotlib>=3.10.0",
+    "pillow>=11.1.0",
+    "pymupdf>=1.25.2",
+    "python-dotenv>=1.0.1",
+    "typer>=0.15.1",
+]
